<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- english strings -->
    <!-- autogenerated strings -->
    <string name="app_name">MyOwnNotes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_note_list">MyOwnNotes</string>
    <string name="title_activity_note_single">Note</string>
    <string name="title_activity_about_activity">About</string>
    <string name="title_activity_help_activity">Help</string>

    <!-- NoteSingle strings -->
    <string name="note_title">Note title</string>
    <string name="note_content">Note content</string>
    <string name="text_save">save</string>
    <string name="text_delete">delete</string>
    <string name="note_has_been_saved">Note has been saved</string>
    <string name="text_test">test</string>
    <string name="action_title_save">Save note</string>
    <string name="action_title_delete">Delete note</string>
    <!-- Toasts -->
    <string name="toast_new_note_saved">New note saved</string>
    <string name="toast_changes_saved">Changes saved</string>
    <string name="toast_note_deleted">Note deleted</string>
    <string name="toast_note_marked_to_delete">Note marked for deletion</string>

    <!-- NoteList strings -->
    <string name="action_new">Create new note</string>
    <string name="action_sync">synchronize</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="notelist_empty_list">There are no saved notes. You either did not create any or have not yet synched with your ownCloud.</string>
    <string name="alert_ssl_cert_not_trusted">It seems you are trying to connect to a server that uses a self-signed certificate. To be able to open this connection, you have to manually add the server\'s certificate to Androids key-chain. \n\nDo you want to see a tutorial on how to do that?</string>
    <string name="alert_answer_yes">Yes</string>
    <string name="alert_answer_no_thanks">No, thanks</string>
    <!-- Toasts -->
    <string name="toast_not_correct_json">Not getting correct JSON from server. Server OK?</string>
    <string name="toast_url_not_correctly_formed">The URL you request data from is not correctly formed</string>
    <string name="toast_url_doesnt_exist">The URL you request data from doesn\'t seem to exist. Check spelling or your internet-connection</string>
    <string name="toast_connection_error">There was a connection error.</string>
    <string name="toast_check_username_password">Please check your username and password.</string>
    <string name="toast_no_internet_connection">No internet-connection has been found. Please connect to the internet to synchronize.</string>
    <string name="toast_sync_in_progress">Sync in progress</string>

    <!-- Settings strings -->
    <string name="settings_text_credentials">Credentials:</string>
    <string name="settings_text_server_address">Server-Address:</string>
    <string name="settings_text_server_address_hint">https://www.server.com[:port]</string>
    <string name="settings_text_https">https://</string>
    <string name="settings_text_username">Username:</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password">Password:</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_synchronization">Synchronization</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_defaultnotetitle">Default Note Title</string>
    <string name="settings_text_defaultnotetitle_datetime">Date and time</string>
    <string name="settings_text_saved">Settings saved</string>
    <string name="settings_text_debug">Debug</string>
    <string name="settings_text_extensive_log_output">Enable extensive LogCat output</string>
    
    <!-- Toasts -->
    <string name="toast_enter_valid_username">Please enter your ownCloud-server username</string>
    <string name="toast_enter_password">Please enter your ownCloud-server password</string>
    <string name="toast_enter_valid_https">Please enter a valid URL. Must begin with \"https://\"</string>
    
    <!-- About strings -->
    <string name="text_aykit_logo">The aykit logo</string>
    <string name="text_about_text">
        This app is brought to you by aykit - an association supporting art, culture and science. \nMore information on our website: \n\nhttp://aykit.org
    </string>
    <string name="text_requirements">
        App for ownCloud notes. Please be aware you need:\n - ownCloud notes installed server wise: https://github.com/owncloud/notes\n - a SSL certificate installed on your server: See https://ay.vc/5g \nUse "My Own Notes" to create, edit, delete and sync your notes with your ownCloud.\n\nTo allow the app connecting to servers with self-signed certificates open your Settings -> Security to add them.
    </string>
    <string name="text_revenue">
        All revenue will be spent to improve this app and do other great things to support internet freedom. If you have any suggestions or want to build this application yourself, visit us at https://github.com/aykit/myownnotes-android.
    </string>
    
    <!-- Help strings -->
    <string name="text_help_text">
       	Which URL should I enter?\n
		Enter the URL to the root of your ownCloud installation - that is: the same URL you use to connect to your ownCloud via the browser.\n(e.g.: https://myowncloud.com) 
		\n\n
		Can I use this app to connect to my ownCloud via http and not https ?\n
		No, that is not possible. The Notes-API requests username and password to be sent for each connection. If you used http, you would send these vital informations as plaintext. Not a good idea! \n(Why? Read this: "Man-in-the-middle"-Attack http://en.wikipedia.org/wiki/Man-in-the-middle_attack)
		\n\n
		I have an ownCloud server with a self-signed certificate. Can I use this app for my server?\n
		Yes, you can - but not out-of-the-box. You have to specifically tell Android to accept your self-signed certificate. This is done by manually adding the servers certificate to Androids Key-Manager.
		\nSee this tutorial on how to do that: http://aykit.org/sites/myownnotes.html
    </string>

    <!-- NoteTable -->
    <string name="to_delete">to Delete</string>
    <string name="new_note">new Note</string>
    <string name="to_update">to Update</string>

</resources>
