<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    >
	<item
	    android:id="@+id/action_new"
	    android:icon="@drawable/ic_action_new"
	    android:title="@string/action_new"
	    android:showAsAction="always"
	    />
	<item
	    android:id="@+id/action_sync"
	    android:icon="@drawable/ic_action_refresh"
	    android:title="@string/action_sync"
	    android:showAsAction="always"
	    />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
      	/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_help"
      	/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_about"
      	/>

</menu>
