<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".NoteSingleActivity"
	    android:orientation="vertical" 
	    >
	
	    <EditText
	        android:id="@+id/edittext_note_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:maxLines="1"
	        android:hint="@string/note_title"
	            />
	
	    <EditText
		     android:id="@+id/edittext_note_content"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:hint="@string/note_content"
		     android:inputType="textMultiLine"
		     />
	    
		 <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    >
		    
		     <Button
		        android:onClick="button_delete"
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:layout_marginRight="20dp"
		        android:text="@string/text_delete"
		         />
	    	<Button 
		        android:onClick="button_save"
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:layout_marginRight="20dp"
		        android:text="@string/text_save"
		        />
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>
